[gd_scene load_steps=18 format=3 uid="uid://cbnrx2xpmgtqk"]

[ext_resource type="Script" uid="uid://43sjvgqjgyu8" path="res://Scripts/CharacterSelect/CharacterSelectUI.gd" id="1_cwxw3"]
[ext_resource type="PackedScene" uid="uid://cf13rcs6hgstl" path="res://Scenes/UI/Character Select/character_select_icon.tscn" id="2_4wiya"]
[ext_resource type="PackedScene" uid="uid://cu8fhpggbxh6d" path="res://Scenes/Test/test_scene.tscn" id="2_xxipc"]
[ext_resource type="Script" uid="uid://cl6083xybgfk0" path="res://Scripts/CharacterSelect/CharacterAbilityPreviewUI.gd" id="3_26quq"]
[ext_resource type="PackedScene" uid="uid://y3l4wyvfguee" path="res://Scenes/UI/Character Select/character_select_character_ability_panel.tscn" id="3_grihp"]
[ext_resource type="PackedScene" uid="uid://cggb2x36mslpl" path="res://Scenes/Characters/brawler_character.tscn" id="3_rr48u"]
[ext_resource type="Script" uid="uid://bc6vf4w4ekv4w" path="res://Scripts/Resources/CharacterSelectData/CharacterSelectData.gd" id="4_b8ars"]
[ext_resource type="Texture2D" uid="uid://bmexg36or4ejj" path="res://Sprites/UI/Character Icons/MaskIcon.png" id="4_xxipc"]
[ext_resource type="PackedScene" uid="uid://bgy7pdawvoiwa" path="res://Scenes/Characters/mage_character.tscn" id="6_dbpv4"]
[ext_resource type="PackedScene" uid="uid://dqtqghdwyycf3" path="res://Scenes/Characters/phantom_character.tscn" id="8_flssm"]
[ext_resource type="PackedScene" uid="uid://dsv311pctm6hj" path="res://Scenes/Characters/plague_character.tscn" id="9_tkc3w"]
[ext_resource type="PackedScene" uid="uid://dophsrqv8y3sh" path="res://Scenes/Characters/hammer_character.tscn" id="10_xxipc"]

[sub_resource type="Resource" id="Resource_b8ars"]
script = ExtResource("4_b8ars")
character_scene = ExtResource("3_rr48u")
character_name = "Brawler"
character_icon_texture = ExtResource("4_xxipc")
metadata/_custom_type_script = "uid://bc6vf4w4ekv4w"

[sub_resource type="Resource" id="Resource_x3cli"]
script = ExtResource("4_b8ars")
character_scene = ExtResource("6_dbpv4")
character_name = "Pyro"
metadata/_custom_type_script = "uid://bc6vf4w4ekv4w"

[sub_resource type="Resource" id="Resource_flssm"]
script = ExtResource("4_b8ars")
character_scene = ExtResource("8_flssm")
character_name = "Phantom Dancer"
metadata/_custom_type_script = "uid://bc6vf4w4ekv4w"

[sub_resource type="Resource" id="Resource_tkc3w"]
script = ExtResource("4_b8ars")
character_scene = ExtResource("9_tkc3w")
character_name = "Plague"
metadata/_custom_type_script = "uid://bc6vf4w4ekv4w"

[sub_resource type="Resource" id="Resource_xxipc"]
script = ExtResource("4_b8ars")
character_scene = ExtResource("10_xxipc")
character_name = "Sentinel"
metadata/_custom_type_script = "uid://bc6vf4w4ekv4w"

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cwxw3")
level_scene = ExtResource("2_xxipc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -344.5
offset_right = 450.0
offset_bottom = 344.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer2"]
custom_minimum_size = Vector2(1800, 600)
layout_mode = 2

[node name="CharacterAbilityPreview" type="HBoxContainer" parent="Panel/VBoxContainer2/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_26quq")

[node name="PassiveAbilityPreviewPanel" parent="Panel/VBoxContainer2/PanelContainer/CharacterAbilityPreview" instance=ExtResource("3_grihp")]
unique_name_in_owner = true
layout_mode = 2

[node name="PrimaryAbilityPreviewPanel" parent="Panel/VBoxContainer2/PanelContainer/CharacterAbilityPreview" instance=ExtResource("3_grihp")]
unique_name_in_owner = true
layout_mode = 2

[node name="UtilityAbilityPreviewPanel" parent="Panel/VBoxContainer2/PanelContainer/CharacterAbilityPreview" instance=ExtResource("3_grihp")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CharacterGridContainer" type="GridContainer" parent="Panel/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
columns = 10

[node name="CharacterSelectIcon" parent="Panel/VBoxContainer2/VBoxContainer/CharacterGridContainer" instance=ExtResource("2_4wiya")]
layout_mode = 2
character_data = SubResource("Resource_b8ars")

[node name="CharacterIcon" parent="Panel/VBoxContainer2/VBoxContainer/CharacterGridContainer/CharacterSelectIcon/PanelContainer" index="0"]
texture = ExtResource("4_xxipc")

[node name="CharacterSelectIcon2" parent="Panel/VBoxContainer2/VBoxContainer/CharacterGridContainer" instance=ExtResource("2_4wiya")]
layout_mode = 2
character_data = SubResource("Resource_x3cli")

[node name="CharacterSelectIcon3" parent="Panel/VBoxContainer2/VBoxContainer/CharacterGridContainer" instance=ExtResource("2_4wiya")]
layout_mode = 2
character_data = SubResource("Resource_flssm")

[node name="CharacterSelectIcon4" parent="Panel/VBoxContainer2/VBoxContainer/CharacterGridContainer" instance=ExtResource("2_4wiya")]
layout_mode = 2
character_data = SubResource("Resource_tkc3w")

[node name="CharacterSelectIcon5" parent="Panel/VBoxContainer2/VBoxContainer/CharacterGridContainer" instance=ExtResource("2_4wiya")]
layout_mode = 2
character_data = SubResource("Resource_xxipc")

[node name="StartGameButton" type="Button" parent="Panel/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "START GAME"

[editable path="Panel/VBoxContainer2/VBoxContainer/CharacterGridContainer/CharacterSelectIcon"]
